--- a/index.html
+++ b/index.html
@@ -2,12 +2,31 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>George R. R. Martin</title>
-		<meta name="description" content="This page is dedicated to George R. R. Martin, his bibliography and awards. Join the millions of readers around the world who have come to love George R. R. Martin's tales of intrigue, heroism, and betrayal." />
-		<meta name="keywords" content="george martin, george r r martin, game of thrones, books, fantasy, george martin laby" />
+        <meta name="keywords" content="george martin, george r r martin, game of thrones, books, fantasy, george martin laby" />
         <link rel="stylesheet" href="styles.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="robots" content="all" />
+        
+        <!-- HTML Meta Tags -->
+<title>George R. R. Martin</title>
+<meta name="description" content="Join the millions of readers around the world who have come to love George R. R. Martin's tales of intrigue, heroism, and betrayal.">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://dawidbodanka.github.io/OSI/index.html">
+<meta property="og:type" content="website">
+<meta property="og:title" content="George R. R. Martin">
+<meta property="og:description" content="Join the millions of readers around the world who have come to love George R. R. Martin's tales of intrigue, heroism, and betrayal.">
+<meta property="og:image" content="https://opengraph.b-cdn.net/production/images/98337c6d-8af3-4e2e-98cb-23f33ff3730b.jpg?token=h6Cv1I7-hmzr0Dv8GS1Ztnu4wmrFv2ZM-YISzr90FXo&height=1198&width=893&expires=33278648834">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="dawidbodanka.github.io">
+<meta property="twitter:url" content="https://dawidbodanka.github.io/OSI/index.html">
+<meta name="twitter:title" content="George R. R. Martin">
+<meta name="twitter:description" content="Join the millions of readers around the world who have come to love George R. R. Martin's tales of intrigue, heroism, and betrayal.">
+<meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/98337c6d-8af3-4e2e-98cb-23f33ff3730b.jpg?token=h6Cv1I7-hmzr0Dv8GS1Ztnu4wmrFv2ZM-YISzr90FXo&height=1198&width=893&expires=33278648834">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
         <style>
             .active {
                 background-color: #333333;
