--- a/index.html
+++ b/index.html
@@ -26,6 +26,46 @@
 <meta name="twitter:description" content="Join the millions of readers around the world who have come to love George R. R. Martin's tales of intrigue, heroism, and betrayal.">
 <meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/98337c6d-8af3-4e2e-98cb-23f33ff3730b.jpg?token=h6Cv1I7-hmzr0Dv8GS1Ztnu4wmrFv2ZM-YISzr90FXo&height=1198&width=893&expires=33278648834">
 
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "George R.R. Martin - kółko czytelników",
+  "image": "https://dawidbodanka.github.io/OSI/sources/homephoto.jpg",
+  "url": "https://dawidbodanka.github.io/OSI/index.html",
+  "telephone": "123 456 789",
+  "priceRange": "$$",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Dąbrowskiego 71",
+    "addressLocality": "Częstochowa",
+    "postalCode": "42-201",
+    "addressCountry": "PL"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": 50.82354329630325,
+    "longitude": 19.11055162488919
+  },
+  "openingHoursSpecification": [{
+    "@type": "OpeningHoursSpecification",
+    "dayOfWeek": [
+      "Monday",
+      "Tuesday",
+      "Wednesday",
+      "Thursday",
+      "Friday"
+    ],
+    "opens": "10:15",
+    "closes": "11:00"
+  },{
+    "@type": "OpeningHoursSpecification",
+    "dayOfWeek": "Saturday",
+    "opens": "10:15",
+    "closes": "10:30"
+  }] 
+}
+</script>
 <!-- Meta Tags Generated via https://www.opengraph.xyz -->
         <style>
             .active {
