--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
                 background-color: #333333;
             }
         </style>
+	    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-41Y35SE48W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-41Y35SE48W');
+</script>
     </head>
     <body>
         <header><p>George R. R. Martin</p></header>
