--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <meta name="twitter:description" content="Join the millions of readers around the world who have come to love George R. R. Martin's tales of intrigue, heroism, and betrayal.">
 <meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/98337c6d-8af3-4e2e-98cb-23f33ff3730b.jpg?token=h6Cv1I7-hmzr0Dv8GS1Ztnu4wmrFv2ZM-YISzr90FXo&height=1198&width=893&expires=33278648834">
 
-<script type="application/ld+json">
+<script type="application/ld+json" async>
 {
   "@context": "https://schema.org",
   "@type": "LocalBusiness",
@@ -73,8 +73,8 @@
             }
         </style>
 	    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-41Y35SE48W"></script>
-<script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-41Y35SE48W" async></script>
+<script async>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
