--- a/interviews.html
+++ b/interviews.html
@@ -60,32 +60,32 @@
             <p class="heading">Gallery</p>
             <div class="gallery">
                 <a target="_blank" href="sources/photo1.jpg"
-                    ><img src="sources/photo1.jpg" alt="photo1" width="500px"
+                    ><img src="sources/photo1.jpg" alt="photo1" width="500px" loading="lazy"
                 /></a>
             </div>
             <div class="gallery">
                 <a target="_blank" href="sources/photo2.jpg"
-                    ><img src="sources/photo2.jpg" alt="photo2" width="500px"
+                    ><img src="sources/photo2.jpg" alt="photo2" width="500px" loading="lazy"
                 /></a>
             </div>
             <div class="gallery">
                 <a target="_blank" href="sources/photo3.jpg"
-                    ><img src="sources/photo3.jpg" alt="photo3" width="500px"
+                    ><img src="sources/photo3.jpg" alt="photo3" width="500px" loading="lazy"
                 /></a>
             </div>
             <div class="gallery">
                 <a target="_blank" href="sources/photo4.jpg"
-                    ><img src="sources/photo4.jpg" alt="photo4" width="500px"
+                    ><img src="sources/photo4.jpg" alt="photo4" width="500px" loading="lazy"
                 /></a>
             </div>
             <div class="gallery">
                 <a target="_blank" href="sources/photo5.jpg"
-                    ><img src="sources/photo5.jpg" alt="photo5" width="500px"
+                    ><img src="sources/photo5.jpg" alt="photo5" width="500px" loading="lazy"
                 /></a>
             </div>
             <div class="gallery">
                 <a target="_blank" href="sources/photo6.jpg"
-                    ><img src="sources/photo6.jpg" alt="photo6" width="500px"
+                    ><img src="sources/photo6.jpg" alt="photo6" width="500px" loading="lazy"
                 /></a>
             </div>
         </div>
