--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
 <meta name="twitter:description" content="Join the millions of readers around the world who have come to love George R. R. Martin's tales of intrigue, heroism, and betrayal.">
 <meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/98337c6d-8af3-4e2e-98cb-23f33ff3730b.jpg?token=h6Cv1I7-hmzr0Dv8GS1Ztnu4wmrFv2ZM-YISzr90FXo&height=1198&width=893&expires=33278648834">
 
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "rb4kdjx3xs");
+</script>
+	    
 <script type="application/ld+json" async>
 {
   "@context": "https://schema.org",
