--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="robots" content="all" />
         
         <!-- HTML Meta Tags -->
-<title>George R. R. Martin</title>
+<title>George R. R. Martin - Page about author</title>
 <meta name="description" content="Join the millions of readers around the world who have come to love George R. R. Martin's tales of intrigue, heroism, and betrayal.">
 
 <!-- Facebook Meta Tags -->
