--- a/more.html
+++ b/more.html
@@ -19,6 +19,10 @@
         y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
     })(window, document, "clarity", "script", "rb4kdjx3xs");
 </script>
+	    
+    <script src="https://cdn.botpress.cloud/webchat/v2.5/inject.js"></script>
+<script src="https://files.bpcontent.cloud/2025/05/30/14/20250530143751-Q96SN5MI.js"></script>
+    
     </head>
     <body>
         <header><p>George R. R. Martin</p></header>
