--- a/chat.html
+++ b/chat.html
@@ -23,7 +23,17 @@
           window.botpress.on("webchat:ready", () => {
             botpress.open();
           });
-          // Paste your Webchat config snippet here
+          window.botpress.init({
+  "botId": "5ed7ce4c-8da9-47f1-bf0b-ecfe6183ff39",
+  "configuration": {
+    "website": {},
+    "email": {},
+    "phone": {},
+    "termsOfService": {},
+    "privacyPolicy": {}
+  },
+  "clientId": "72e6fa12-8bc5-44d1-a3d6-396134df7670"
+});
         </script>
       </body>
     </html>'
