--- a/chat.html
+++ b/chat.html
@@ -5,25 +5,18 @@
   <meta charset="utf-8" />
 
   
-    <script src="https://cdn.botpress.cloud/webchat/v2.5/inject.js"></script>
 <script src="https://files.bpcontent.cloud/2025/05/30/14/20250530143751-Q96SN5MI.js"></script>
     
 </head>
   <body>
-    <div class="webchat" style="height: 600px; width: 400px;">
-  <iframe
-    style="height: 100%; width: 100%; border: none;"
-    srcdoc='
-    <!doctype html>
-    <html lang="en">
-      <head></head>
-      <body>
-        <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
-        <script defer>
-          window.botpress.on("webchat:ready", () => {
-            botpress.open();
-          });
-          window.botpress.init({
+<div id="webchat-container" style="position: relative; width: 100%; height: 100%;">
+  <script src="https://cdn.botpress.cloud/webchat/v2.5/inject.js"></script>
+  <script>
+    window.botpress.on("webchat:ready", () => {
+      window.botpress.open();
+    });
+
+    window.botpress.init({
   "botId": "5ed7ce4c-8da9-47f1-bf0b-ecfe6183ff39",
   "configuration": {
     "website": {},
@@ -34,7 +27,27 @@
   },
   "clientId": "72e6fa12-8bc5-44d1-a3d6-396134df7670"
 });
-        </script>
+  </script>
+  <style>
+    #webchat-container {
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
+    .bpFab {
+      display: none;
+    }
+    .bpWebchat {
+      position: absolute !important;
+      top: 0 !important;
+      left: 0 !important;
+      right: 0 !important;
+      bottom: 0 !important;
+      width: 100% !important;
+      height: 100% !important;
+    }
+  </style>
+</div>
       </body>
     </html>'
   ></iframe>
