--- a/index.html
+++ b/index.html
@@ -129,5 +129,10 @@
             <img src="sources/homephoto.jpg" alt="photo of george martin" />
         </div>
         <footer><p>Dawid Bodanka @ Maribor 2024</p></footer>
+
+	    
+    <script src="https://cdn.botpress.cloud/webchat/v2.5/inject.js"></script>
+<script src="https://files.bpcontent.cloud/2025/05/30/14/20250530143751-Q96SN5MI.js"></script>
+    
     </body>
 </html>
