--- a/biography.html
+++ b/biography.html
@@ -12,6 +12,7 @@
                 background-color: #333333;
             }
         </style>
+	    <script src="https://cmp.osano.com/wUXP3JaSzx/17ba321b-4758-4c66-9013-1a0d8320e16e/osano.js"></script>
 	    <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
