--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <meta name="twitter:title" content="George R. R. Martin">
 <meta name="twitter:description" content="Join the millions of readers around the world who have come to love George R. R. Martin's tales of intrigue, heroism, and betrayal.">
 <meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/98337c6d-8af3-4e2e-98cb-23f33ff3730b.jpg?token=h6Cv1I7-hmzr0Dv8GS1Ztnu4wmrFv2ZM-YISzr90FXo&height=1198&width=893&expires=33278648834">
-
+<script src="https://cmp.osano.com/wUXP3JaSzx/17ba321b-4758-4c66-9013-1a0d8320e16e/osano.js"></script>
 <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
